--- a/siteApp/templates/siteApp/dashboard.html
+++ b/siteApp/templates/siteApp/dashboard.html
@@ -8,6 +8,7 @@
     <div class="div-username">
       <label>{{user}}</label>
       <a href="logout/">Logout</a>
+      <p> test </p>
     </div>
   </div>
   <div class="following ui-helper-clearfix">
