Trying to show values

--- a/siteApp/templates/siteApp/company_details.html
+++ b/siteApp/templates/siteApp/company_details.html
@@ -2,6 +2,11 @@
 {% load wikipedia %}
 
 {% block content %}
+<h1>
+  {{previous}}
+  {{value}}
+  {{other}}
+</h1>
 <img src="{{company.logo}}">
 <h1 style='display:block;color:lightblue'>
 {{company.name}}
